--- a/scss/themes/_header.scss
+++ b/scss/themes/_header.scss
@@ -1,4 +1,5 @@
-div#header{
+div#home{
+margin-bottom: 20px;
 	
 }	
 
@@ -9,7 +10,7 @@ div#header{
 
 @media all and ( min-width: 600px ) {
 
-div#header{
+div#home{
 	
 }	
 
